--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ before_script:
   - composer install
 
 script: vendor/bin/phpunit
+
+after_success:
+ - wget https://github.com/php-coveralls/php-coveralls/releases/download/v1.0.1/coveralls.phar -O coveralls.phar
+ - php coveralls.phar -v
