Grab digiaonline/Json-helpers from Packagist now that it is published

--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,11 @@
             "email": "sam.stenvall@digia.com"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/digiaonline/json-helpers.git"
-        }  
-    ],
     "require": {
         "php": ">=7.0",
         "aws/aws-php-sns-message-validator": "^1.4",
         "illuminate/http": "^5.5",
-        "digiaonline/json-helpers": "dev-master",
+        "digiaonline/json-helpers": "^1.0",
         "jalle19/laravel-lost-interfaces": "^1.1",
         "illuminate/support": "^5.5"
     },
