--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
         "psr-4": {
             "Digia\\Lumen\\SnsMiddleware\\Tests\\": "tests/unit"
         }
+    },
+    "scripts": {
+        "test": [
+            "phpunit"
+        ]
     }
 }
