--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "illuminate/support": "^5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "phpstan/phpstan": "^0.9.2"
     },
     "autoload": {
         "psr-4": {
@@ -33,7 +34,8 @@
     },
     "scripts": {
         "test": [
-            "phpunit"
+            "phpunit",
+            "phpstan analyse -l 7 src/"
         ]
     }
 }
