--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     "require": {
         "php": ">=7.0",
         "aws/aws-php-sns-message-validator": "^1.4",
-        "illuminate/http": "^5.5",
+        "illuminate/http": "^5.5|^6.0",
         "digiaonline/json-helpers": "^1.0",
-        "jalle19/laravel-lost-interfaces": "^1.1",
-        "illuminate/support": "^5.5"
+        "jalle19/laravel-lost-interfaces": "^1.2",
+        "illuminate/support": "^5.5|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
